--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "tsc": "^2.0.4"
   }
 }
