--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy:public",
     "start": "node dist/index.js",
-    "start:dev": "ts-node index.ts"
+    "start:dev": "ts-node index.ts",
+    "copy:public": "cp -r ./public ./dist/"
   },
   "author": "Gremlins (Gülsüm, Elwyn, Bjarne, D' Jordy, Kasper)",
   "license": "ISC",
