--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && npm run copy:public",
     "start": "node dist/index.js",
-    "start:dev": "ts-node index.ts",
+    "start:dev": "ts-node ./src/index.ts",
     "copy:public": "cp -r ./src/public ./dist/"
   },
   "author": "Gremlins (Gülsüm, Elwyn, Bjarne, D' Jordy, Kasper)",
@@ -18,5 +18,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
