--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
