--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "author": "Gremlins (Gülsüm, Elwyn, Bjarne, D' Jordy, Kasper)",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.21",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-ejs-layouts": "^2.5.1",
     "helmet": "^5.0.2",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/node": "^17.0.21",
+    "@types/express": "^4.17.13",
+    "@types/express-ejs-layouts": "^2.5.0"
   }
 }
