--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
     "helmet": "^5.0.2",
+    "mongodb": "^4.4.1",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
