--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
@@ -22,8 +23,8 @@
     "typescript": "^4.6.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
     "@types/express": "^4.17.13",
-    "@types/express-ejs-layouts": "^2.5.0"
+    "@types/express-ejs-layouts": "^2.5.0",
+    "@types/node": "^17.0.21"
   }
 }
