--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
-    "cookie-session": "^2.0.0",
+    "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.8",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
