--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-ejs-layouts": "^2.5.0",
-    "@types/node": "^17.0.21"
+    "@types/express-session": "^1.17.4",
+    "@types/node": "^17.0.21",
+    "ts-node-dev": "^1.1.8"
   }
 }
