--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ts-node-dev": "^1.1.8"
   },
   "engines" : { 
-    "npm" : ">=7.0.0",
-    "node" : ">=16.0.0"
+    "npm" : "=7.0.0",
+    "node" : "=16.0.0"
   }
 }
