--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && npm run copy:public",
+    "build": "tsc",
     "start": "node dist/index.js",
     "start:dev": "ts-node ./src/index.ts",
     "copy:public": "cp -r ./src/public ./dist/"
