--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.2",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
@@ -26,6 +27,7 @@
     "typescript": "^4.6.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/express-ejs-layouts": "^2.5.0",
     "@types/express-session": "^1.17.4",
