--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "mongodb": "^4.4.1",
+    "nodejs-web-scraper": "^6.1.0",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
