--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expresstest",
+  "name": "theoneapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "start:dev": "ts-node ./src/index.ts"
   },
-  "author": "Gremlins (Gülsüm, Elwyn, Bjarne, D' Jordy, Kasper)",
+  "author": "Gremlins (Gülsüm, Elwyn, Bjarne, D'Jordy, Kasper)",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
