--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "html-to-pdf": "^0.1.11",
-    "mongodb": "^4.4.1",
+    "mongodb": "^4.14.0",
     "nodejs-web-scraper": "^6.1.0",
-    "typescript": "^4.6.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
@@ -33,6 +34,6 @@
     "@types/express-ejs-layouts": "^2.5.0",
     "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.21",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^2.0.0"
   }
 }
